# demo-jinko-api-cookbook

./: .envrc.sample  .gitignore  README.md  flake.nix  pyproject.toml
cookbooks/: basic.ipynb  run_a_trial.ipynb
cookbooks/resources/run_a_trial/: solving_options.json
