[tool.poetry]
name = "demo-jinko-api-cookbook"
version = "0.0.1"
description = "A light demonstration of Jinko API feature based on a Jupyter Notebook"
authors = ["SSE Team <oss@novainsilico.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyter-server = "^2.13.0"
jupyterlab = "^4.0.6"
matplotlib = "*"
panda = "^0.3.1"
plotly = "^5.17.0"
python = ">=3.10,<3.12"
seaborn = "^0.13.2"
black = {extras = ["jupyter"], version = "^24.4.2"}
jinko = { git = "https://github.com/novainsilico/jinko-api-helpers-python.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
